--- a/Videostudio/index.html
+++ b/Videostudio/index.html
@@ -9,7 +9,10 @@
 
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-    <link href="css/style.css" rel="stylesheet" type="text/css"> 
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+	<link href="css/style_for_js.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+<script type="text/javascript" src="js/script.js"></script>	
 	
  </head>
  <body>
@@ -117,12 +120,23 @@
     <div class="limit">
         <div class="title">Наше портфолио</div>
 		<br>
-        <div class="carousel-container">
-		
-		 <a href="https://www.youtube.com/watch?v=HfZKda9G9X8" target="_blank">
-            <img src="images/video1.jpg"/>
-		 </a>
+
+		 <div class="slider-box">
+    <div class="slider"> 
+<a href="https://www.youtube.com/watch?v=HfZKda9G9X8" target="_blank">	
+        <img src="images/Video1.jpg" alt="">
+		</a>
+<a href="https://www.youtube.com/watch?v=ZHAqT4hXnMw" target="_blank">	
+        <img src="images/Video2.jpg" alt="">
+		</a>
+<a href="https://www.youtube.com/watch?v=FVK6M7i0sjs" target="_blank">	
+        <img src="images/Video3.jpg" alt="">
+		</a>
+     </div>
+    <div class="prev"></div>
+    <div class="next"></div>
         </div>
+		
 		<br>
         <a href=""><div class="blue_button_add">Смотреть еще работы</div></a>
     </div>
