--- a/Videostudio/index.html
+++ b/Videostudio/index.html
@@ -11,7 +11,7 @@
 
     <link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href="css/style_for_js.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>	
 	
  </head>
