--- a/Videostudio/index.html
+++ b/Videostudio/index.html
@@ -124,13 +124,13 @@
 		 <div class="slider-box">
     <div class="slider"> 
 <a href="https://www.youtube.com/watch?v=HfZKda9G9X8" target="_blank">	
-        <img src="images/Video1.jpg" alt="">
+        <img src="images/video1.jpg" alt="">
 		</a>
 <a href="https://www.youtube.com/watch?v=ZHAqT4hXnMw" target="_blank">	
-        <img src="images/Video2.jpg" alt="">
+        <img src="images/video2.jpg" alt="">
 		</a>
 <a href="https://www.youtube.com/watch?v=FVK6M7i0sjs" target="_blank">	
-        <img src="images/Video3.jpg" alt="">
+        <img src="images/video3.jpg" alt="">
 		</a>
      </div>
     <div class="prev"></div>
