--- a/SEO/index.html
+++ b/SEO/index.html
@@ -18,7 +18,8 @@
       <link rel="stylesheet" href="css/font-awesome.min.css">
       <link rel="stylesheet" href="css/themify-icons.css">
       <!-- custom fonts -->
-      <link href="https://fonts.googleapis.com/css?family=Nunito:200,400,700,800" rel="stylesheet">
+      <link href="//fonts.googleapis.com/css?family=Nunito:200,400,700,800" rel="stylesheet">
+	  <script type="text/javascript" src="//code.jquery.com/jquery-latest.min.js"></script>
    </head>
    <body class="page-content">
       <nav class="navbar navbar-default navbar-fixed-top" id="verh">
@@ -234,7 +235,6 @@
       <!-- Bootstrap core JavaScript
          ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script type="text/javascript" src="//code.jquery.com/jquery-latest.min.js"></script>
       <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
       <script src="js/bootstrap.min.js"></script>
       <script src="js/jquery-scrollto/jquery-scrollto.js"></script>
