--- a/SEO/index.html
+++ b/SEO/index.html
@@ -94,15 +94,15 @@
          <div class="slider-box1">
     <div class="slider1"> 
 
-	    <img src="images/sled1.jpg" alt="">
+	    <img src="images/sled1.JPG" alt="">
 
-        <img src="images/sled2.jpg" alt="">
+        <img src="images/sled2.JPG" alt="">
 		
-		<img src="images/sled3.jpg" alt="">
+		<img src="images/sled3.JPG" alt="">
 		
-		<img src="images/sled4.jpg" alt="">
+		<img src="images/sled4.JPG" alt="">
 		
-		<img src="images/sled5.jpg" alt="">
+		<img src="images/sled5.JPG" alt="">
 
      </div>
     <div class="prev"></div>
@@ -142,17 +142,17 @@
 	         <div class="slider-box">
     <div class="slider"> 
 	
-        <img src="images/slid1.jpg" alt="">
+        <img src="images/slid1.JPG" alt="">
 
-        <img src="images/slid2.jpg" alt="">
+        <img src="images/slid2.JPG" alt="">
 		
-		<img src="images/slid3.jpg" alt="">
+		<img src="images/slid3.JPG" alt="">
 		
-		<img src="images/slid4.jpg" alt="">
+		<img src="images/slid4.JPG" alt="">
 		
-		<img src="images/slid5.jpg" alt="">
+		<img src="images/slid5.JPG" alt="">
 		
-		<img src="images/slid6.jpg" alt="">
+		<img src="images/slid6.JPG" alt="">
 
      </div>
     <div class="prev"></div>
