--- a/SEO/index.html
+++ b/SEO/index.html
@@ -14,6 +14,7 @@
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <!-- Custom CSS -->
       <link href="css/style.css" rel="stylesheet">
+	  <link href="css/stylejs.css" rel="stylesheet">
       <link href="css/helper.css" rel="stylesheet">
       <link rel="stylesheet" href="css/font-awesome.min.css">
       <link rel="stylesheet" href="css/themify-icons.css">
@@ -91,23 +92,28 @@
 	
 	    <a href="javascript:PopUpHide()">Закрыть</a>
 	
-         <div class="slider-box1">
-    <div class="slider1"> 
+<div id="carousel">
 
-	    <img src="images/sled1.JPG" alt="">
+	<div id="buttons">
+		<a href="#" id="prev">prev</a>
+		<a href="#" id="next">next</a>
+		<div class="clear"></div>
+	</div>
+	
+	<div class="clear"></div>
 
-        <img src="images/sled2.JPG" alt="">
-		
-		<img src="images/sled3.JPG" alt="">
-		
-		<img src="images/sled4.JPG" alt="">
-		
-		<img src="images/sled5.JPG" alt="">
+	<div id="slides"> 
+		<ul>
+			<li><img src="images/sled1.jpg" alt="Slide 1"/></li>
+			<li><img src="images/sled2.jpg" alt="Slide 2"/></li>
+			<li><img src="images/sled3.jpg" alt="Slide 3"/></li>
+			<li><img src="images/sled4.jpg" alt="Slide 4"/></li>
+			<li><img src="images/sled5.jpg" alt="Slide 5"/></li>
+		</ul>
+		<div class="clear"></div>
+	</div>
 
-     </div>
-    <div class="prev"></div>
-    <div class="next"></div>
-        </div>
+</div>
 	
 	
     </div>
@@ -240,7 +246,7 @@
       <script src="js/jquery-scrollto/jquery-scrollto.js"></script>
 	  <script type="text/javascript" src="js/script.js"></script>
 	  <script type="text/javascript" src="js/present.js"></script>
-	  <script type="text/javascript" src="js/scriptz.js"></script>
+	  <script type="text/javascript" src="js/sli.js"></script>
     
 
 
