--- a/SEO/index.html
+++ b/SEO/index.html
@@ -104,11 +104,11 @@
 
 	<div id="slides"> 
 		<ul>
-			<li><img src="images/sled1.jpg" alt="Slide 1"/></li>
-			<li><img src="images/sled2.jpg" alt="Slide 2"/></li>
-			<li><img src="images/sled3.jpg" alt="Slide 3"/></li>
-			<li><img src="images/sled4.jpg" alt="Slide 4"/></li>
-			<li><img src="images/sled5.jpg" alt="Slide 5"/></li>
+			<li><img src="images/sled1.JPG" alt="Slide 1"/></li>
+			<li><img src="images/sled2.JPG" alt="Slide 2"/></li>
+			<li><img src="images/sled3.JPG" alt="Slide 3"/></li>
+			<li><img src="images/sled4.JPG" alt="Slide 4"/></li>
+			<li><img src="images/sled5.JPG" alt="Slide 5"/></li>
 		</ul>
 		<div class="clear"></div>
 	</div>
