--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -137,7 +137,7 @@
 			<table>
 			<tr>
 				<td id="coladv">
-				<div class="advtitle">Другие преиимущества работы со мной</div>
+				<p class="prhed">Другие преиимущества работы со мной</div>
 				<p class="pricipes">Мои основные принципы при работе с заказчиком: честность, ответственость и&nbsp;грамотный подход к пониманию и реализации современых требований, предьявляемых к веб-ресурсам. Я перфекционист и всегда стремлюсь к&nbsp;наилучшему результату, но, в то же время, я объективно оцениваю свои способности и не берусь за то, что мне не по силам.</p>
 				</td>
 				<td id="colproj">
