--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,8 +24,7 @@
 	<script type="text/javascript" src="//code.jquery.com/jquery-latest.min.js"></script>
 	
 	<!-- [Подключение значка] -->
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" type="image/png" href="favicon.png" />
 	
 </head>
 
