--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -160,23 +160,22 @@
 	<h2>Моё портфолио</h2>
 	
 
-	        <ul class="services-list">
-            <li>
-                <a href="https://martyushovmv.github.io/Videostudio/">
+	        <div class="workslist">
+
+                <a href="https://martyushovmv.github.io/portfolio/">
                     <img src="images/work1.png" alt="">
                 </a>
-            </li>
-            <li>
-                <a href="https://martyushovmv.github.io/portfolio/">
+
+
+                <a href="https://martyushovmv.github.io/Videostudio/">
                     <img src="images/work2.png" alt="">
                 </a>
-            </li>
-            <li>
-                <a href="">
+
+                <a href="https://martyushovmv.github.io/SEO/">
                     <img src="images/work3.png" alt="">
                 </a>
-            </li>
-        </ul>
+				
+        </div>
 
 	
 	<div class="grey_button">Показать все</div>
