Homework 2nd semester

--- a/Homework2/index.html
+++ b/Homework2/index.html
@@ -49,8 +49,8 @@
 <div>
 <ul>
         <a href="https://martyushovmv.moodlecloud.com/"><li>SCORM-пакет <br><br>{логин <b>student</b> | пароль <b>qwerty1</b>}</li><a>
-        <a href=""><li>Корзина</li><a>
-        <a href=""><li>Тестирование уравнений</li><a>
+        <a href="https://martyushovmv.github.io/Homework2/Bin"><li>Корзина</li><a>
+        <a href="https://martyushovmv.github.io/Homework2/Kramer"><li>Тестирование уравнений</li><a>
 </ul>
 </div>
 
