Homework 2nd semester

--- a/Homework2/index.html
+++ b/Homework2/index.html
@@ -48,9 +48,9 @@
 
 <div>
 <ul>
-        <a href="https://martyushovmv.moodlecloud.com/"><li>SCORM-пакет <br><br>{логин <b>student</b> | пароль <b>qwerty1</b>}</li><a>
-        <a href="https://martyushovmv.github.io/Homework2/Bin"><li>Корзина</li><a>
-        <a href="https://martyushovmv.github.io/Homework2/Kramer"><li>Тестирование уравнений</li><a>
+        <a href="https://martyushovmv.moodlecloud.com/" target="_blank"><li>SCORM-пакет <br><br>{логин <b>student</b> | пароль <b>qwerty1</b>}</li><a>
+        <a href="https://martyushovmv.github.io/Homework2/Bin" target="_blank"><li>Корзина</li><a>
+        <a href="https://martyushovmv.github.io/Homework2/Kramer" target="_blank"><li>Тестирование уравнений</li><a>
 </ul>
 </div>
 
