--- a/Homework2/index.html
+++ b/Homework2/index.html
@@ -39,6 +39,10 @@
                 text-align: center;
 
         }
+		
+		ul li: hover {
+                background: #ffcc66;
+        }
 	</style>
 </head>
 
