--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]> <html class="lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]> <html class="lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
+<!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="ru"> <![endif]-->
+<!--[if IE 7]> <html class="lt-ie9 lt-ie8" lang="ru"> <![endif]-->
+<!--[if IE 8]> <html class="lt-ie9" lang="ru"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="ru"> <!--<![endif]-->
 <head>
 
 	<!-- [Стандартные модули] -->
@@ -30,7 +30,7 @@
 
 <body>
 
-   <!-- Header -->
+   <!-- Шапка сайта -->
 	<header id="main">
 
 	<table id="menu">
@@ -51,9 +51,9 @@
             <li><a class="scroll" href="#whyme">Почему я?</a></li>
 			<li><a class="scroll" href="#advantages">Преимущества</a></li>
 			<li><a class="scroll" href="#portfolio">Портфолио</a></li>
-         </ul> <!-- end #nav -->
+         </ul> <!-- Конец #nav -->
 
-      </nav> <!-- end #nav-wrap -->
+      </nav> <!-- Конец #nav-wrap -->
 	  </td>
 	  
 	  	<td id="colsoc">
@@ -76,16 +76,16 @@
 			<tr>
 				<td>
 				<hr class="shline">
-				<div id="inf">Возраст: 23 года<br>Образование: Высшее<div>
+				<div id="inf">Возраст: 25 лет<br>Образование: Высшее<div>
 				</td>
 				<td align="right"><div class="white_button">Скачать резюме</div></td>
 			</tr>
 		</table>
 	  </div>
 
-	</header> <!-- Header End -->
+	</header> <!-- Конец шапки -->
 	
-   <!-- Section [Skills] -->
+   <!-- Раздел [Навыки] -->
 	<section id="skills">
 	<h2>Мои навыки</h2>
 		<div class="pro">
@@ -98,9 +98,9 @@
 					</ul>
 		</div>
 		<h3>*я не останавливаюсь на достигнутом</h3>
-	</section> <!-- Section [Skills] End-->
+	</section> <!-- Конец [Навыки] -->
 	
-   <!-- Section [Why me?] -->
+   <!-- Раздел [Почему я?] -->
 	<section id="whyme">
 
 <div class="services clearfix">
@@ -129,9 +129,9 @@
             </li>
         </ul>
 </div><!-- /services -->
-	</section> <!-- Section [Why me?] End-->
+	</section> <!-- Конец [Почему я?] -->
 	
-   <!-- Section [Advantages] -->
+   <!-- Раздел [Преимущества] -->
 	<section id="advantages">
 			<table>
 			<tr>
@@ -148,13 +148,13 @@
 				</td>
 			</tr>
 		</table>
-	</section> <!-- Section [Advantages] End-->
+	</section> <!-- Конец [Преимущества] -->
 	
 	<br>
 	<hr class="grline">
 	<br>
 	
-	<!-- Section [Portfolio] -->
+	<!-- Раздел [Портфолио] -->
 	<section id="portfolio">
 	
 	<h2>Моё портфолио</h2>
@@ -163,16 +163,16 @@
 	        <div class="workslist">
 
                 <a href="https://martyushovmv.github.io/portfolio/">
-                    <img src="images/work1.png" alt="">
+                    <img src="images/work1.png" alt="Сайт-порфолио">
                 </a>
 
 
                 <a href="https://martyushovmv.github.io/Videostudio/">
-                    <img src="images/work2.png" alt="">
+                    <img src="images/work2.png" alt="Сайт видеостудии">
                 </a>
 
                 <a href="https://martyushovmv.github.io/SEO/">
-                    <img src="images/work3.png" alt="">
+                    <img src="images/work3.png" alt="Сайт по основам SEO">
                 </a>
 				
         </div>
@@ -180,9 +180,9 @@
 	
 	<div class="grey_button">Показать все</div>
 	
-	</section> <!-- Section [Portfolio] End -->
+	</section> <!-- Конец [Портфолио] -->
 
- <!-- footer -->
+ <!-- Подвал сайта -->
    <footer>
 	  <div id="top"><a class="scroll" href="#main"><img src="images/arrow.png" alt=""><br>Наверх</a></div>
 	  <div style="margin: auto;" class="white_button">Написать мне</div>
@@ -197,6 +197,6 @@
 		
         <div class="social_text">Copyright &copy; 2017 - Portfolio - Created by MartyushovMV</div>
 
-	</footer>  <!-- Footer End-->
+	</footer>  <!-- Конец подвала -->
 </body>
 </html>
