--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -172,7 +172,7 @@
                 </a>
 
                 <a href="https://martyushovmv.github.io/SEO/">
-                    <img src="images/work3.png" alt="Сайт по основам SEO">
+                    <img src="images/work3.png" alt="Сайт PromoPlane">
                 </a>
 				
         </div>
