--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -70,7 +70,7 @@
 	  <div class="promo">
 		<table class="tbl">
 			<tr>
-				<td><img alt="фотография" src="images/photo.png" class="photo"></td>
+				<td align="center"><img alt="фотография" src="images/photo.png" class="photo"></td>
 				<td id="colcard"><img alt="визитка" src="images/card.png" class="card"></td>
 			</tr>
 			<tr>
@@ -136,11 +136,11 @@
 			<table>
 			<tr>
 				<td id="coladv">
-				<p class="prhed">Другие преиимущества работы со мной</div>
+				<p class="prhed">Преиимущества работы со мной</div>
 				<p class="pricipes">Мои основные принципы при работе с заказчиком: честность, ответственость и&nbsp;грамотный подход к пониманию и реализации современых требований, предьявляемых к веб-ресурсам. Я перфекционист и всегда стремлюсь к&nbsp;наилучшему результату, но, в то же время, я объективно оцениваю свои способности и не берусь за то, что мне не по силам.</p>
 				</td>
 				<td id="colproj">
-				<a href="https://www.youtube.com/watch?v=ZMhvB4Z10JQ">
+				<a href="#">
 				<img alt="проект" src="images/project.jpg" class="project">
 				</a>
 				<br>
