--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,6 @@
 	<title>Мартюшов Михаил - Веб-разработчик</title>
 	<meta name="author" content="MartyushovMV">
 	<meta name="description" content="Услуги веб-разработчика по созданию сайтов. Ознакомьтесь с выполненными работами и оставьте заявку.">
-	<meta property="og:description" content="Услуги веб-разработчика по созданию сайтов. Ознакомьтесь с выполненными работами и оставьте заявку."/>
 	<meta name="keywords" content="Мартюшов Михаил, Мартюшов, Михаил, программист, разработчик, сайт, лендинг, опыт, качество, надежность, сроки ">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	
@@ -89,13 +88,39 @@
 	<section id="skills">
 	<h2>Мои навыки</h2>
 		<div class="pro">
-					<ul class="skills">
-					    <li><span class="pro-expand sk1"></span><em>HTML+CSS</em></li>
-						<li><span class="pro-expand sk2"></span><em>PHP+MySQL</em></li>
-						<li><span class="pro-expand sk3"></span><em>JavaScript</em></li>
-						<li><span class="pro-expand sk4"></span><em>CMS WordPress</em></li>
-						<li><span class="pro-expand sk5"></span><em>Photoshop, CorelDRAW</em></li>
-					</ul>
+				<ul class="skills">
+
+					<li><em>HTML+CSS</em>
+					<svg width="720" height="45">
+  					<rect x="2" y="2" rx="20" ry="20" width="715" height="37" style="fill:#de9191;stroke:black;stroke-width:3;opacity:1" />
+  					<rect x="3.6" y="3.5" rx="17" ry="17" width="670" height="34" style="fill:#ac2f2f;stroke-width:5;opacity:1" />
+					</svg></li>
+
+					<li><em>PHP+MySQL</em>
+					<svg width="720" height="45">
+  					<rect x="2" y="2" rx="20" ry="20" width="715" height="37" style="fill:#de9191;stroke:black;stroke-width:3;opacity:1" />
+  					<rect x="3.6" y="3.5" rx="17" ry="17" width="670" height="34" style="fill:#ac2f2f;stroke-width:5;opacity:1" />
+					</svg></li>
+
+					<li><em>JavaScript</em>
+					<svg width="720" height="45">
+  					<rect x="2" y="2" rx="20" ry="20" width="715" height="37" style="fill:#de9191;stroke:black;stroke-width:3;opacity:1" />
+  					<rect x="3.6" y="3.5" rx="17" ry="17" width="670" height="34" style="fill:#ac2f2f;stroke-width:5;opacity:1" />
+					</svg></li>
+
+					<li><em>CMS WordPress</em>
+					<svg width="720" height="45">
+  					<rect x="2" y="2" rx="20" ry="20" width="715" height="37" style="fill:#de9191;stroke:black;stroke-width:3;opacity:1" />
+  					<rect x="3.6" y="3.5" rx="17" ry="17" width="670" height="34" style="fill:#ac2f2f;stroke-width:5;opacity:1" />
+					</svg></li>
+
+					<li><em>Photoshop, CorelDRAW</em>
+					<svg width="720" height="45">
+  					<rect x="2" y="2" rx="20" ry="20" width="715" height="37" style="fill:#de9191;stroke:black;stroke-width:3;opacity:1" />
+  					<rect x="3.6" y="3.5" rx="17" ry="17" width="670" height="34" style="fill:#ac2f2f;stroke-width:5;opacity:1" />
+					</svg></li>
+
+				</ul>
 		</div>
 		<h3>*я не останавливаюсь на достигнутом</h3>
 	</section> <!-- Конец [Навыки] -->
