--- a/playlists/index.html
+++ b/playlists/index.html
@@ -59,6 +59,51 @@
             </div>
           </div>
         </a>
+        <a href="https://musify.club/track/play/8838528/deadly-avenger-dead-heat.mp3" tabindex="3">
+          <div class="track_row">
+            <div class="play-col">
+              <div>
+                <div class="play_status"></div>
+              </div>
+            </div>
+            <div class="track_info">
+              <div class="track-number-col">
+                <div class="track_number">4.</div>
+              </div>
+              <p class="track_name">Deadly Avenger - Dead Heat<span class="track_duration">2:54</span></p>
+            </div>
+          </div>
+        </a>
+        <a href="https://dlsv37.sonicbit.net/file/dl2/dHFORURHMjVMMkJIaitBdGhMRmtPNmRqdmJtV2hsN0NwTWRNbXdkVDlqQnFBUE5GNTZ3eVpDTTJDaitnYmRJdjhmWFlJK252b3VkUmhPOXpTWXhubUpDZFVDekJPWnJVaXFDdGhGSVQyVWc9/1748592233.mp3" tabindex="4">
+          <div class="track_row">
+            <div class="play-col">
+              <div>
+                <div class="play_status"></div>
+              </div>
+            </div>
+            <div class="track_info">
+              <div class="track-number-col">
+                <div class="track_number">5.</div>
+              </div>
+              <p class="track_name">Cosmo Cocktail - Lost In Time<span class="track_duration">4:19</span></p>
+            </div>
+          </div>
+        </a>
+        <a href="https://moosic.my.mail.ru/file/cf2e52817fa8347fc7b83b3b4ca26143.mp3" tabindex="5">
+          <div class="track_row">
+            <div class="play-col">
+              <div>
+                <div class="play_status"></div>
+              </div>
+            </div>
+            <div class="track_info">
+              <div class="track-number-col">
+                <div class="track_number">6.</div>
+              </div>
+              <p class="track_name">Sleen Mp - Frontal Assault<span class="track_duration">3:23</span></p>
+            </div>
+          </div>
+        </a>
       </section>
     </div>
     <script src="./js/app.js"></script>
