--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -17,7 +17,7 @@
             <div class="container">
               <div class="navbar-brand">
                 <a class="navbar-item" href="/">
-                  <img src="./images/logo_2.svg" alt="Logo" style="max-height: 100%;">
+                  <img src="./images/logo_2.svg" alt="Logo">
                 </a>
                 <span class="navbar-burger burger" data-target="navbarMenu">
                   <span></span>
