--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -224,7 +224,7 @@
                     <a href="#anti_nark">Антинаркотическая деятельность</a>
                   </li>
                   <li>
-                    <a href="#coronavirus_safety">Профилактики гриппа, ОРВИ и короновирусной инфекции</a>
+                    <a href="#coronavirus_safety">Профилактики гриппа, ОРВИ и коронавирусной инфекции</a>
                   </li>
                   <li>
                     <a href="#national_projects">Национальные проекты России</a>
@@ -272,7 +272,6 @@
                   <a href="https://oplata.spmi.ru/">
                     <div class="payment-button">
                       <p>Оплата услуг</p>
-                      <img src="./images/arrow_up_right_white.svg">
                     </div>
                   </a>
                 </div>
