--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -285,7 +285,7 @@
                     <a href="#requisites">Реквизиты Университета (Действуют с 01.11.2023)</a>
                   </li>
                   <li>
-                    <a href="tel:+78123820128">Телефон справочной службы: 8-812-382-01-28</a>
+                    <a href="tel:+78123820128">Телефон справочной службы:<br>8-812-382-01-28</a>
                   </li>
                 </ul>
               </div>
