Change slider images

--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -195,7 +195,7 @@
                   <div class="keen-slider__slide number-slide1">
                     <div class="poster">
                       <figure class="image">
-                        <img loading="lazy" src="./images/slide_1.jpg" alt="">
+                        <img loading="lazy" src="./images/slide1.jpg" alt="">
                       </figure>
                     </div>
                     <div class="slide-info">
@@ -209,7 +209,7 @@
                   <div class="keen-slider__slide number-slide2">
                     <div class="poster">
                       <figure class="image">
-                        <img loading="lazy" src="./images/slide_2.jpg" alt="">
+                        <img loading="lazy" src="./images/slide2.jpg" alt="">
                       </figure>
                     </div>
                     <div class="slide-info">
