add new favicon

--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" id="carousel_css-css" href="./css/carousel.css" type="text/css" media="all">
     <link rel="stylesheet" id="keenslider_css-css" href="./css/keen-slider.min.css" type="text/css" media="all">
     <script type="text/javascript" src="./js/carousel.js" id="carousel_js-js" defer="defer"></script>
-    <link rel="icon" href="/favicon-150x150.png" sizes="32x32">
-    <link rel="icon" href="/favicon-300x300.png" sizes="192x192">
-    <link rel="apple-touch-icon" href="/favicon-300x300.png">
+    <link rel="icon" href="/teamoscow/favicon-150x150.png" sizes="32x32">
+    <link rel="icon" href="/teamoscow/favicon-300x300.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="/teamoscow/favicon-300x300.png">
   </head>
 
   <body class="home blog wp-theme-moscowtea">
