--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -132,7 +132,7 @@
             </picture>
           </div>
 
-          <div class="fullpage-pattern-bottom">
+          <div class="main_pattern">
             <video id="middle-video" autoplay="" muted="" poster="./images/flower_pattern.svg" onended="videoStopped(this)">
               <source src="./images/flower_pattern.mp4" type="video/mp4">
             </video>
