--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -234,7 +234,7 @@
           </div>
 
           <div class="halfpage-pattern-top">
-            <video id="animated-video" autoplay="" muted="" poster="./images/pearl.svg" onended="videoCompleted(this)">
+            <video id="animated-video" autoplay="" muted="" poster="./images/pearl.svg" onended="videoEnded(this)">
               <source src="./images/pearl.mp4" type="video/mp4">
             </video>
           </div>
@@ -404,20 +404,11 @@
             <li id="menu-item-35" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-35">
               <a href="#payment_and_delivery_info">Оплата и доставка</a>
             </li>
-            <li id="menu-item-36" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-36">
-              <a href="#help">Помощь</a>
-            </li>
             <li id="menu-item-37" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-37">
               <a href="#contract">Договор оферты</a>
             </li>
             <li id="menu-item-38" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-38">
               <a href="#privacy-policy">Политика конфиденциальности</a>
-            </li>
-            <li id="menu-item-39" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-39">
-              <a href="#gift_certificates">Подарочные сертификаты</a>
-            </li>
-            <li id="menu-item-40" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-40">
-              <a href="#orders_safety">Безопасность покупок</a>
             </li>
           </ul>
         </div>
@@ -430,14 +421,17 @@
             <li id="menu-item-27" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-27">
               <a href="#honey">Мёд</a>
             </li>
+            <li id="menu-item-30" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-30">
+              <a href="#dishes">Посуда</a>
+            </li>
             <li id="menu-item-28" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-28">
               <a href="#jam">Варенье</a>
             </li>
             <li id="menu-item-29" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-29">
               <a href="#sweets">Сладости</a>
             </li>
-            <li id="menu-item-30" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-30">
-              <a href="#dishes">Посуда</a>
+            <li id="menu-item-31" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-31">
+              <a href="#herbal">Травяные сборы</a>
             </li>
           </ul>
         </div>
