add more partners

--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -179,6 +179,69 @@
                     </a>
                   </div>
                 </div>
+
+
+
+
+
+                <div class="keen-slider__slide number-slide4 partner">
+                  <div class="partner-logo">
+                    <a href="https://www.karavaevi.ru/">
+                      <img src="./images/partner_4.png">
+                    </a>
+                  </div>
+                </div>
+                <div class="keen-slider__slide number-slide5 partner">
+                  <div class="partner-logo">
+                    <a href="https://cafe.alenka.ru/">
+                      <img src="./images/partner_5.png">
+                    </a>
+                  </div>
+                </div>
+                <div class="keen-slider__slide number-slide6 partner">
+                  <div class="partner-logo">
+                    <a href="https://cafe-anderson.ru/">
+                      <img src="./images/partner_6.png">
+                    </a>
+                  </div>
+                </div>
+                <div class="keen-slider__slide number-slide7 partner">
+                  <div class="partner-logo">
+                    <a href="https://accor.ru/moscow/movenpick-moscow-taganskaya/">
+                      <img src="./images/partner_7.png">
+                    </a>
+                  </div>
+                </div>
+                <div class="keen-slider__slide number-slide8 partner">
+                  <div class="partner-logo">
+                    <a href="https://mercure.accor.com/ru.html">
+                      <img src="./images/partner_8.png">
+                    </a>
+                  </div>
+                </div>
+                <div class="keen-slider__slide number-slide9 partner">
+                  <div class="partner-logo">
+                    <a href="https://marriottimperialplaza.moscow/">
+                      <img src="./images/partner_9.png">
+                    </a>
+                  </div>
+                </div>
+                <div class="keen-slider__slide number-slide10 partner">
+                  <div class="partner-logo">
+                    <a href="https://matryoshka-rest.ru/">
+                      <img src="./images/partner_10.png">
+                    </a>
+                  </div>
+                </div>
+                <div class="keen-slider__slide number-slide11 partner">
+                  <div class="partner-logo">
+                    <a href="https://ginza.ru/msk/restaurant/marivanna">
+                      <img src="./images/partner_11.png">
+                    </a>
+                  </div>
+                </div>
+
+
               </div>
 
             </div>
@@ -379,42 +442,8 @@
     <div class="footer-container">
       <div class="footer-row">
         <div class="footer-col">
-          <p class="footer-column-name">О нас</p>
-          <ul id="footer-menu-1" class="list-unstyled">
-            <li id="menu-item-20" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-20">
-              <a href="https://russpass.ru/moskovskoe-chaepitie">Блог</a>
-            </li>
-            <li id="menu-item-21" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-21">
-              <a href="#fests">Фестивали</a>
-            </li>
-            <li id="menu-item-22" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-22">
-              <a href="#job_openings">Вакансии</a>
-            </li>
-            <li id="menu-item-23" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-23">
-              <a href="#franchise">Франшиза</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <p class="footer-column-name">Покупателям</p>
-          <ul id="footer-menu-2" class="list-unstyled">
-            <li id="menu-item-24" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-24">
-              <a href="#addresses">Адреса магазинов</a>
-            </li>
-            <li id="menu-item-35" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-35">
-              <a href="#payment_and_delivery_info">Оплата и доставка</a>
-            </li>
-            <li id="menu-item-37" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-37">
-              <a href="#contract">Договор оферты</a>
-            </li>
-            <li id="menu-item-38" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-38">
-              <a href="#privacy-policy">Политика конфиденциальности</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-col">
           <p class="footer-column-name">Продукция</p>
-          <ul id="footer-menu-2" class="list-unstyled">
+          <ul id="footer-menu-1" class="list-unstyled">
             <li id="menu-item-25" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-25">
               <a href="#tea">Чай</a>
             </li>
@@ -437,7 +466,7 @@
         </div>
         <div class="footer-col">
           <p class="footer-column-name">Контакты</p>
-          <ul id="footer-menu-4" class="list-unstyled">
+          <ul id="footer-menu-2" class="list-unstyled">
             <li id="menu-item-26" class="telephone">
               <a href="tel:+79999999999">+7-999-999-99-99</a>
             </li>
@@ -452,6 +481,40 @@
             </li>
             <li id="menu-item-34" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-34">
               <a href="#feedback">Обратная связь</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <p class="footer-column-name">Покупателям</p>
+          <ul id="footer-menu-3" class="list-unstyled">
+            <li id="menu-item-24" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-24">
+              <a href="#addresses">Адреса магазинов</a>
+            </li>
+            <li id="menu-item-35" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-35">
+              <a href="#payment_and_delivery_info">Оплата и доставка</a>
+            </li>
+            <li id="menu-item-37" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-37">
+              <a href="#contract">Договор оферты</a>
+            </li>
+            <li id="menu-item-38" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-38">
+              <a href="#privacy-policy">Политика конфиденциальности</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <p class="footer-column-name">О нас</p>
+          <ul id="footer-menu-4" class="list-unstyled">
+            <li id="menu-item-20" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-20">
+              <a href="https://russpass.ru/moskovskoe-chaepitie">Блог</a>
+            </li>
+            <li id="menu-item-21" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-21">
+              <a href="#fests">Фестивали</a>
+            </li>
+            <li id="menu-item-22" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-22">
+              <a href="#job_openings">Вакансии</a>
+            </li>
+            <li id="menu-item-23" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-23">
+              <a href="#franchise">Франшиза</a>
             </li>
           </ul>
         </div>
