--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -424,11 +424,11 @@
                   <p class="map-title">Где прикупить в Москве</p>
                   <p>Приобрести купаж «Москва» вы можете на флагманской площадке Тверской площади и в сети магазинов «Азбука вкуса»: согревающий и ароматный напиток в 125 кофейнях, листовой чай — в 145 магазинах.</p>
                 </div>
-                <div class="map-description-image" id="map"></div>
+                <div class="map-description-image">
+                  <img src="./images/map_pattern.png">
+                </div>
               </div>
-              <div class="map" style="width: 100%; background-color: #F2FAE5;">
-                <img src="./images/map_image.jpg">
-              </div>
+              <div class="map" id="map" style="width: 100%; background-color: #F2FAE5;"></div>
             </div>
           </div>
 
