add error fixes

--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="/teamoscow/favicon-150x150.png" sizes="32x32">
     <link rel="icon" href="/teamoscow/favicon-300x300.png" sizes="192x192">
     <link rel="apple-touch-icon" href="/teamoscow/favicon-300x300.png">
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=2b15bdac-7b1f-46a4-af8f-3cac17c9e767&lang=ru_RU" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/v3/?apikey=2b15bdac-7b1f-46a4-af8f-3cac17c9e767&lang=ru_RU"></script>
   </head>
 
   <body class="home blog wp-theme-moscowtea">
@@ -428,7 +428,7 @@
                   <img src="./images/map_pattern.png">
                 </div>
               </div>
-              <div class="map" id="map" style="width: 100%; background-color: #F2FAE5;"></div>
+              <div class="map" id="map"></div>
             </div>
           </div>
 
