--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -44,7 +44,7 @@
                   <a href="#about">О нас</a>
                 </li>
                 <li id="menu-item-10" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-10">
-                  <a href="#where_to_buy" aria-current="page">Где прикупить в Москве</a>
+                  <a href="#where_to_buy" aria-current="page">Где купить в Москве</a>
                 </li>
                 <li id="menu-item-14" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-14">
                   <a href="#payment_and_delivery_info">Оплата и доставка</a>
@@ -96,7 +96,7 @@
               <a href="#about">О нас</a>
             </li>
             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-10">
-              <a href="#where_to_buy" aria-current="page">Где прикупить в Москве</a>
+              <a href="#where_to_buy" aria-current="page">Где купить в Москве</a>
             </li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-14">
               <a href="#payment_and_delivery_info">Оплата и доставка</a>
@@ -131,7 +131,7 @@
 
           <div class="banner-ribbon">
             <picture>
-              <img src="./images/banner-ribbon.svg">
+              <img src="./images/banner-ribbon">
             </picture>
           </div>
 
@@ -146,7 +146,7 @@
           </div>
 
           <div class="title-with-hat">
-            <h2>Прикупи да пригуби</h2>
+            <h2>Каталог</h2>
           </div>
 
           <div class="block-carousel">
@@ -157,7 +157,7 @@
             <div class="partners-section-content">
 
               <div class="partners-section-header">
-                <h2 class="mainpage-section-title">Прикупи у наших партнёров</h2>
+                <h2 class="mainpage-section-title">Купить у наших партнёров</h2>
               </div>
 
               <div id="partners-slider" class="keen-slider">
@@ -416,7 +416,7 @@
             <div class="map-section-content">
               <div class="map-description">
                 <div class="map-description-text">
-                  <p class="map-title">Где прикупить в Москве</p>
+                  <p class="map-title">Где купить в Москве</p>
                   <p>Приобрести купаж «Москва» вы можете на флагманской площадке Тверской площади и в сети магазинов «Азбука вкуса»: согревающий и ароматный напиток в 125 кофейнях, листовой чай — в 145 магазинах.</p>
                 </div>
                 <div class="map-description-image">
@@ -456,7 +456,7 @@
               <a href="#sweets">Сладости</a>
             </li>
             <li id="menu-item-31" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-31">
-              <a href="#herbal">Травяные сборы</a>
+              <a href="#herbals">Травяные сборы</a>
             </li>
           </ul>
         </div>
@@ -498,21 +498,7 @@
           </ul>
         </div>
         <div class="footer-col">
-          <p class="footer-column-name">О нас</p>
-          <ul id="footer-menu-4" class="list-unstyled">
-            <li id="menu-item-20" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-20">
-              <a href="https://russpass.ru/moskovskoe-chaepitie">Блог</a>
-            </li>
-            <li id="menu-item-21" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-21">
-              <a href="#fests">Фестивали</a>
-            </li>
-            <li id="menu-item-22" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-22">
-              <a href="#job_openings">Вакансии</a>
-            </li>
-            <li id="menu-item-23" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-23">
-              <a href="#franchise">Франшиза</a>
-            </li>
-          </ul>
+          <img src="./images/footer_pattern.svg" alt="Узор">
         </div>
       </div>
       <p class="copyright-text">© «Московское чаепитие», 2025. Все права защищены.</p>
