--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -131,7 +131,7 @@
 
           <div class="banner-ribbon">
             <picture>
-              <img src="./images/banner-ribbon">
+              <img src="./images/banner-ribbon.svg">
             </picture>
           </div>
 
@@ -501,7 +501,10 @@
           <img src="./images/footer_pattern.svg" alt="Узор">
         </div>
       </div>
-      <p class="copyright-text">© «Московское чаепитие», 2025. Все права защищены.</p>
+      <div class="copyright-text">
+        <p>© «Московское чаепитие», 2025.</p>
+        <p>Все права защищены.</p>
+      </div>
     </div>
   </footer>
 
