--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -497,7 +497,7 @@
             </li>
           </ul>
         </div>
-        <div class="footer-col">
+        <div class="footer-col footer-pattern-col">
           <img src="./images/footer_pattern.svg" alt="Узор">
         </div>
       </div>
