--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -501,10 +501,8 @@
           <img src="./images/footer_pattern.svg" alt="Узор">
         </div>
       </div>
-      <div class="copyright-text">
-        <p>© «Московское чаепитие», 2025.</p>
-        <p>Все права защищены.</p>
-      </div>
+      <p class="copyright-text">© «Московское чаепитие», 2025.<br>Все права защищены.</p>
+      </p>
     </div>
   </footer>
 
