--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -507,7 +507,7 @@
   </footer>
 
     <script src="./js/keen-slider.min.js"></script>
-    <script src="./js/app.js"></script>
+    <script type="module" src="./js/app.js"></script>
   </body>
 
 </html>
