--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -80,9 +80,12 @@
               <a href="tel:+78123288496">Чай</a>
             </li>
             <li id="menu-item-18" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-18">
-              <a href="#sweets" aria-current="page">Сладости</a>
+              <a href="#herbals">Травяные сборы</a>
             </li>
             <li id="menu-item-19" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-19">
+              <a href="#sweets" aria-current="page">Сладости</a>
+            </li>
+            <li id="menu-item-20" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-20">
               <a href="#dishes" aria-current="page">Посуда</a>
             </li>
           </ul>
