--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -139,7 +139,7 @@
           </div>
 
           <div class="main_pattern">
-            <video id="middle-video" autoplay="" muted="" poster="./images/flower_pattern.svg" onended="videoStopped(this)">
+            <video id="middle-video" autoplay="" muted="" poster="./images/flower_pattern.svg" onended="videoEnded(this)">
               <source src="./images/flower_pattern.mp4" type="video/mp4">
             </video>
           </div>
@@ -408,7 +408,7 @@
           </div>
 
           <div class="halfpage-pattern-top">
-            <video id="animated-video" autoplay="" muted="" poster="./images/pearl.svg" onended="videoEnded(this)">
+            <video id="animated-video" autoplay="" muted="" poster="./images/pearl.svg" onended="videoFinished(this)">
               <source src="./images/pearl.mp4" type="video/mp4">
             </video>
           </div>
