--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" href="/teamoscow/favicon-300x300.png" sizes="192x192">
     <link rel="apple-touch-icon" href="/teamoscow/favicon-300x300.png">
     <script src="https://api-maps.yandex.ru/v3/?apikey=2b15bdac-7b1f-46a4-af8f-3cac17c9e767&lang=ru_RU"></script>
+    <script type="module" src="./js/ymaps.js"></script>
   </head>
 
   <body class="home blog wp-theme-moscowtea">
@@ -620,7 +621,7 @@
   </footer>
 
     <script src="./js/keen-slider.min.js"></script>
-    <script type="module" src="./js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 
 </html>
